# rag-chatbot

./: .gitignore  Caddyfile  LICENSE  README.md  chain.py  constants.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  generate_key.py  ingest.py  ingestion_pipeline.py  main.py  pyproject.toml  rag.ipynb  repo_structure.py
chat-langchain/: package-lock.json
chat-langchain/app/components/: ChatMessageBubble.tsx  ChatWindow.tsx  SourceBubble.tsx
chroma/: chroma.env.example
rag_chatbot_backend/: Dockerfile  README.md  chain.py  dev.config  dockerfile  ingestion_pipeline.py  keys.env.example  main.py  prod.config  pyproject.toml  rag.ipynb
rag_chatbot_backend/chatbot_backend/: ingestion_pipeline.py  main.py  schema.py
rag_chatbot_backend/chatbot_backend/chain/: chain.py  doc_utils.py  embedders.py  llms.py  prompts.py  retrievers.py
rag_chatbot_backend/chatbot_backend/configs/: dev.config  prod.config
rag_chatbot_backend/chatbot_backend/utils/: parser.py  sitemap_crawler.py
rag_chatbot_frontend/: .env.example  Dockerfile
rag_chatbot_frontend/app/: globals.css  layout.tsx  page.tsx
rag_chatbot_frontend/app/components/: ChatWindow.tsx  EmptyState.tsx  footer.tsx
