[tool.poetry]
name = "chatbot_backend"
version = "0.1.0"
description = "chatbot for blog"
authors = ["Jayesh <jayeshmahapatra@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
langchain = "^0.1.5"
langchain-community = "^0.0.19"
langchain-openai = "^0.0.3"
langchain-together = "0.0.2.post1"
langserve = {extras = ["server"], version = "^0.0.39"}
fastapi = "^0.103.1"
pydantic = "2.5.0"
uvicorn = "^0.23.2"
beautifulsoup4 = "^4.12.2"
psycopg2-binary = "^2.9.7"
lxml = "^4.9.3"
pillow = "^10.2.0"
tiktoken = "^0.5.2"
chromadb = "0.4.22"
langfuse = {version = "2.16.2", python = ">=3.11,<3.13"}
unstructured = "0.12.5"


[tool.poetry.group.lint.dependencies]
ruff = "^0.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
